# nwrfc-sys

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
src/: lib.rs  macros.rs  protocol.rs
src/protocol/: connection.rs  enums.rs  function.rs  function_description.rs  structure.rs  types.rs  uc_str.rs  uc_string.rs  utils.rs
src/protocol/types/: connection_attributes.rs  connection_parameter.rs  date_time.rs  error.rs  exception.rs  field_description.rs  ids.rs  parameter_description.rs  type_description.rs
