[package]
name = "sapnwrfc-sys"
version = "7.50.11-0.1.0"
description = "Low level Rust bindings for the SAP NetWeaver RFC Libs"
authors = ["Torben Hansing <torben.hansing@contact-software.com>"]
edition = "2021"
links = "sapnwrfc"
build = "build.rs"

[lib]
crate-type = ["lib"]
doctest = false
bench = false

[build-dependencies]
bindgen = "0.65.1"
