[package]
name = "sapnwrfc-sys"
version = "0.1.0"
description = "Unsafe Rust bindings for the SAP NetWeaver RFC Libs"
authors = ["Torben Hansing <torben.hansing@contact-software.com>"]
edition = "2021"
links = "sapnwrfc"
build = "build.rs"

[lib]
crate-type = ["cdylib"]
doctest = false
bench = false

[build-dependencies]
bindgen = "0.65.1"
